--- a/profil.html
+++ b/profil.html
@@ -10,21 +10,46 @@
 		</div>
 		<div id="menu">
 			<ul>
-				<li><a href="beranda.html">Beranda</a></li>
-				<li><a href="index8.html">Kembali</a></li>
+				<li><a href="beranda.html">Kembali</a></li>
 			</ul>
 		</div>
 		<div id="isi">
 			<div class="isipostingan">
-			<!--menampilkan gambar-->
-				<img src="saitama.jpg" class="gambardepan">
-				<h2>Profil Singkat</h2>
-				<h3>Nama : Lukman</h3>
-				<h3>Tempat Tanggal Lahir : Bantaeng, 24 Desember 2001</h3>
-				<h3>Alamat : Landayya Kel. Lembang Gantarang Keke Kec. Tompobulu Kab. Bantaeng</h3>
-				<h3>Hobi : Nonton Anime</h3>
-				<h3>Kuliah di Universitas Muhammadiyah Bulukumba, mengambil jurusan Ilmu Aktuaria</h3>
-				</div>
+			<h2>Tentang Saya</h2>
+			<table class="table">
+				<tr>
+					<td> Nama Lengkap </td>
+					<td> : Lukman </td>
+				</tr>
+				<tr>
+					<td> Jenis Kelamin </td>
+					<td> : Laki-Laki </td>
+				</tr>
+				<tr>
+					<td> Agama </td>
+					<td> : Islam </td>
+				<tr>
+					<td> Tempat/Tanggal Lahir </td>
+					<td> : Bantaeng/24 Desember 2001 </td>
+				</tr>
+				<tr>
+					<td> Alamat </td>
+					<td> : Landayya Kel. Lembang Gantarang Keke Kec. Tompobulu Kab. Bantaeng </td>
+				</tr>
+				<tr>
+					<td> Universitas </td>
+					<td> : Universitas Muhammadiyah Bulukumba </td>
+				</tr>
+				<tr>
+					<td> Fakultar </td>
+					<td> : Mipa & Sains </td>
+				</tr>
+				<tr>
+					<td> Program Studi </td>
+					<td> : Ilmu Aktuaria </td>
+				</tr>
+			</table>
+			</div>
 		</div>
 		<div id="footer"> &copy 2021, By Wann024</div>
 	</div>
