--- a/beranda.html
+++ b/beranda.html
@@ -9,25 +9,21 @@
 		<div id="header">
 		<img src="header003.png" class="header">
 		</div>
-		<div id="menu">
-			<ul>
-				<li><a href="index8.html">Jadwal Mata Kuliah</a></li>
-				<li><a href="profil.html">Tentang Saya</a></li>
-				<li><a href="Kontak Kami">Kontak Kami</a></li>
-				<li><a href="index9.html">Log out</a></li>
-			</ul>
-		</div>
 		<div id="runningtext">
 		<marquee behavior="scroll" scrolamont="3" onmouseover="this.stop();" onmouseout="this.start();" direction="left">
 			Selamat Datang di Website Ilmu Aktuaria
 		</marquee>
 		</div>
-		<div id="isi">
-			<div class="isipostingan">
-			<!--menampilkan gambar-->
-				<img src="umb02.png" class="gambardepan">
-			</div>
+		<div id="menu">
+			<ul>
+				<li><a href="Jadwal Mata Kuliah Ilmu Aktuaria 2020.html">Jadwal Mata Kuliah</a></li>
+				<li><a href="profil.html">Tentang Saya</a></li>
+				<li><a href="kontak.html">Kontak Kami</a></li>
+				<li><a href="index9.html">Log out</a></li>
+			</ul>
+		</div>
 		<div id="footer"> &copy 2021, By Wann024</div>
+	</div>
 	</div>
 </body>
 </html>
